--- a/Project_1/n-calci-cfm.yaml
+++ b/Project_1/n-calci-cfm.yaml
@@ -100,7 +100,7 @@ data:
           <button class="operator" onclick="appendOperator('+')">+</button>
           
           <button class="clear" onclick="clearDisplay()">C</button>
-	  <button onclick="window.location.href='http://<main-menu-NP-svc-external-IP>'">←</button>
+	  <button onclick="window.location.href='http://<main-menu-LB-svc-DNS>'">←</button>
         </div>
       </div>
       
